Refactor Dockerfile for frontend: enhance build process, improve caching, and streamline multi-stage setup

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,38 @@
-# Stage 1: Build the React app
+########## Frontend Multi-Stage Build (React) ##########
+# Stage 1: Build
 FROM node:18-alpine AS builder
 
-# Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json to install dependencies
-COPY frontend/package.json frontend/package-lock.json ./
+# Leverage build cache for deps
+COPY package.json package-lock.json ./
+RUN npm ci --no-audit --no-fund
 
-# Install dependencies
-RUN npm install
+# Build-time backend URL injection (pipeline passes ARG)
+ARG REACT_APP_BACKEND_SERVER
+ENV REACT_APP_BACKEND_SERVER=${REACT_APP_BACKEND_SERVER}
 
-# Copy the rest of the frontend code and build it
-COPY frontend/build /app/build
+# Copy application source (exclude build if present locally)
+COPY . .
 
-# Create a marker file indicating the build is complete
-RUN touch /app/build/BUILD_COMPLETE
+# Create React build
+RUN npm run build \
+ && touch build/BUILD_COMPLETE
+
+# Stage 2: Runtime (nginx serving static files)
+FROM nginx:1.27-alpine AS runtime
+
+# Minimal hardening: remove default nginx index
+RUN rm -rf /usr/share/nginx/html/*
+
+COPY --from=builder /app/build /usr/share/nginx/html
+
+# Optional: expose marker for any legacy wait logic
+RUN test -f /usr/share/nginx/html/BUILD_COMPLETE || touch /usr/share/nginx/html/BUILD_COMPLETE
+
+EXPOSE 80
+
+# Healthcheck (simple static file presence)
+HEALTHCHECK --interval=30s --timeout=3s --retries=3 CMD [ -f /usr/share/nginx/html/BUILD_COMPLETE ] || exit 1
+
+CMD ["nginx","-g","daemon off;"]
